--- a/components/Nav/Sidebar.module.css
+++ b/components/Nav/Sidebar.module.css
@@ -6,6 +6,7 @@
    width:20vw;
    min-width: 230px;
   height: 100vh;
+  min-height:500px;
   padding: 0;
  margin: 0;
   display: flex;
