--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,7 +30,7 @@ body {
   color: var(--text);
   font-size: 1rem;
   line-height: 1.6;
-  height:100vh;
+
 }
 
 * {
@@ -43,11 +43,15 @@ body {
   display: grid;
   grid-template-columns: 1fr 4fr; /* Or adjust */
   height: 100vh;
+
+
+
 }
 
 .mainContent {
   overflow-y: auto;
-  height: 100vh;
+  
+
 }
 
 
